[package]
name = "wbim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1" }
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.3"
bevy_mod_picking = {version =  "0.13.0", features = ["backend_egui"] }
rand = "0.8.5"
hedron = { git = "https://github.com/josfeenstra/hedron.git", features = ["bevy"] }

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
