[package]
name = "wbim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy-inspector-egui = "0.24"
bevy_egui = "0.27"
bevy_mod_picking = { version = "0.18", features = ["backend_egui"] }
bevy_panorbit_camera = "0.18.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
